# a2a-rs

./: CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml  coverage.yml  publish.yml
a2a/: CHANGELOG.md  Cargo.toml  README.md
a2a-client/: CHANGELOG.md  Cargo.toml  README.md
a2a-client/src/: agent_card.rs  auth.rs  client.rs  factory.rs  jsonrpc.rs  lib.rs  middleware.rs  rest.rs  transport.rs  websocket.rs
a2a-client/tests/: transports_e2e.rs
a2a-grpc/: CHANGELOG.md  Cargo.toml  README.md
a2a-grpc/src/: client.rs  errors.rs  lib.rs  server.rs
a2a-grpc/tests/: e2e.rs
a2a-pb/: CHANGELOG.md  Cargo.toml  README.md  build.rs
a2a-pb/src/: lib.rs  pbconv.rs
a2a-server/: CHANGELOG.md  Cargo.toml  README.md
a2a-server/src/: agent_card.rs  executor.rs  handler.rs  jsonrpc.rs  lib.rs  middleware.rs  rest.rs  sse.rs  websocket.rs
a2a-server/src/push/: mod.rs  sender.rs  store.rs
a2a-server/src/task_store/: inmemory.rs  mod.rs  store.rs
a2a-slimrpc/: CHANGELOG.md  Cargo.toml  README.md
a2a-slimrpc/src/: client.rs  common.rs  errors.rs  server.rs
a2a-slimrpc/tests/: e2e.rs
a2a-stdio/: Cargo.toml
a2a-stdio/src/: framing.rs  handshake.rs  lib.rs
a2a-stdio/tests/: e2e.rs
a2a-websocket/: Cargo.toml  README.md
a2a-websocket/src/: client.rs  common.rs  errors.rs  lib.rs  server.rs
a2a-websocket/tests/: e2e.rs
a2a/src/: agent_card.rs  errordetails.rs  errors.rs  event.rs  jsonrpc.rs  lib.rs  types.rs  websocket.rs
a2acli/: CHANGELOG.md  Cargo.toml  README.md
examples/: Cargo.toml  build.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
examples/helloworld/tests/: transports_e2e.rs
examples/src/: lib.rs
examples/src/helloworld/: client.rs  server.rs
examples/src/helloworld_tls/: client.rs  server.rs
examples/tests/: transports_e2e.rs
