[package]
name = "a2a-grpc"
version = "0.2.0"
description = "A2A v1 gRPC protocol binding for client and server"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "a2a_grpc"

[dependencies]
a2a = { workspace = true }
a2a-client = { workspace = true, default-features = false }
a2a-server = { workspace = true, default-features = false }
a2a-pb = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
tonic-tls = { workspace = true, features = ["rustls"], optional = true }
tokio-rustls = { workspace = true, optional = true }

[dev-dependencies]
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }

[features]
default = ["rustls-tls"]
native-tls = ["a2a-client/native-tls", "a2a-server/native-tls"]
rustls-tls = ["a2a-client/rustls-tls", "a2a-server/rustls-tls"]
rustls = ["dep:tonic-tls", "dep:tokio-rustls", "rustls-tls"]
